Phase 2 F1 (box) — port Chamber from-inside boundary to device kernel (PASS)
New boundaryBoxKernel runs as a third task between chain and move in the
chained TaskGraph; gated per-segment via boundaryActive[i] and per-force
via FilSegment.gpuBoundaryHandled inside checkBugOrBoxCollision (Listeria
from-outside path stays on CPU). Plan-build-time shape dispatch from
Thing.theBox instanceof Chamber (Survey Option A); pill kernel slot left
as a comment for F1b after the CPU pill revival. Near-wall probe matches
CPU bit-for-bit on 5 non-degenerate held configs (rel err 2.5e-16),
gliding-assay viewer check confirms identical wall confinement vs the
CPU arm; default flipped to DIAG_CPU_F1=false. BOA_DIAG_CPU_F1=1 routes
back to the CPU pair for A/B.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>